portfolio/app/root.scss
@import "react-image-gallery/styles/css/image-gallery.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: "Onest Variable", sans-serif;
}

.material-symbols-rounded {
  font-family: "Material Symbols Rounded Variable";
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  &.thin {
    font-weight: 100;
  }
}

@layer components {
  .link-blue {
    @apply text-blue-500 hover:text-blue-600 transition-colors;
  }

  .container {
    @apply px-4 md:px-8 max-w-7xl mx-auto w-full;
  }
}

